# Bartool

./: .gitignore  README.md  code_commenting_guidelines.json  improvements.md  mobile-responsiveness-improvements-summary.md  openapi_paths.yaml  performance-improvements-summary.md  pyproject.toml  requirements.txt  state-management-improvements-summary.md  structure.md  style_guide.md  technical-implementation-guide.md  technical_specification.md  todo_bar_manager.md  usecases.md
.github/: copilot-instructions.md
backend/app/: main.py
backend/app/api/: barcode.py  categories.py  db_admin.py  ingredients.py  inventory.py  macros.py  recipes.py  search.py  shopping_list.py  suggestions.py  synonyms.py  tags.py  unit_synonyms.py
backend/app/db/: crud.py  models.py  schemas.py  seed_db.py  session.py
backend/app/services/: barcode.py  cocktaildb.py  macros.py  macros.yaml  synonyms.json  synonyms.py  unit_conversion.py  unit_synonyms.json  unit_synonyms.py
backend/data/: seed.sqlite
backend/tests/: test_api.py  test_macros.py  test_unit_conversion.py
docs/: README.md  backend.md  frontend.md  macros.md  project_overview.md  running_guide.md
docs/archive/: openapi_paths.yaml  structure.md  todo_bar_manager.md
frontend/: .env  README.md  cypress.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/cypress/e2e/: inventory.cy.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: BarcodeScanner.tsx  Card.tsx  Drawer.tsx  EnhancedSuggestions.tsx  ForceTabletButton.tsx  Navbar.tsx  (+5 more)
(+17 files in other folders)
